--- a/game-play-controller/src/main/resources/application.properties
+++ b/game-play-controller/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql = true
+
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=tester
+#spring.rabbitmq.password=tester
+#spring.rabbitmq.virtual-host=qa1
