--- a/game-play-controller/pom.xml
+++ b/game-play-controller/pom.xml
@@ -171,15 +171,17 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.5.6</version>
+        </dependency>
     </dependencies>
-    
-
-
     <build>
 
-    <finalName>gcs</finalName>
+        <finalName>gcs</finalName>
 
-    <plugins>
+        <plugins>
 
             <plugin>
 
@@ -207,7 +209,7 @@
 
                                 <transformer
 
-                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 
                                     <mainClass>com.fairrummy.GamePlayControllerServiceApplication</mainClass>
 
