--- a/game-play-controller/src/main/resources/application.properties
+++ b/game-play-controller/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/gamedb
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:5433/gamedb
-spring.datasource.username=gameuser
-spring.datasource.password=tester
+spring.datasource.url=jdbc:postgresql://18.191.105.81:5432/fair_rummy_db
+spring.datasource.jdbc-url=jdbc:postgresql://18.191.105.81:5432/fair_rummy_db
+spring.datasource.username=pgadmin
+spring.datasource.password=pgadmin@2025
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Optional JPA settings
 spring.jpa.hibernate.ddl-auto=update
