--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <modules>
         <module>connection-service</module>
-        <module>game-controller-service</module>
+        <module>game-service</module>
         <module>skill-engine</module>
     </modules>
 
